--- a/roles/nginx/templates/site.conf
+++ b/roles/nginx/templates/site.conf
@@ -1,7 +1,7 @@
 {% if site_is_app %}
 upstream sitecluster {
     {% for server in site_servers %}
-    server {{ server }} fail_timeout=0
+    server {{ server }} fail_timeout=0;
     {% endfor %}
 }
 {% endif %}
@@ -39,6 +39,7 @@ server {
   include mod/basic.conf;
 
   ssl_certificate {{ site_certificate }};
+  ssl_trusted_certificate {{ site_ca_certificate }};
   ssl_certificate_key {{ site_certificate_key }};
   ssl_dhparam {{ site_dhparam }};
 
@@ -91,22 +92,21 @@ server {
 
   {% if site_couchdb_is_hosted %}
   location /couchdb {
-  	rewrite /couchdb/(.*) /$1 break;
-  	proxy_pass http://localhost:5984;
+    proxy_pass http://localhost:5984/;
     proxy_redirect off;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Ssl on;
   }
 
-  location ^/couchdb/(.*)/_changes  {
-  	rewrite /couchdb/(.*)/_changes /$1/_changes break;
-  	proxy_pass http://localhost:5984;
+  location ~ ^/couchdb/(.*)/_changes  {
+    rewrite /couchdb/(.*)/_changes /$1/_changes break;
+    proxy_pass http://localhost:5984;
     proxy_redirect off;
     proxy_buffering off;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header X-Forwarded-Ssl on;
+    #proxy_set_header X-Forwarded-Ssl on;
   }
   {% endif %}
 }
