--- a/roles/nginx/tasks/main.yml
+++ b/roles/nginx/tasks/main.yml
@@ -5,20 +5,25 @@
     state: present
     update_cache: yes
   
-- name: remove default nginx default
+- name: deactivate default nginx site
   file: 
-    path: /etc/nginx/sites-enabled/default 
+    path: "{{ nginx_active_sites }}/default"
     state: absent
   when: nginx_disable_default
 
 - name: copy nginx module
   copy:
     src: mod
-    dest: /etc/nginx/
+    dest: "{{ nginx_home }}"
 
 - name: add default config
   template: 
     src: nginx.conf
-    dest: /etc/nginx/nginx.conf
+    dest: "{{ nginx_config }}"
   notify:
     - reload nginx
+
+- import_tasks: site.yml
+  when: nginx_create_site
+  tags:
+    - sites
